--- a/Image Gallery/index.html
+++ b/Image Gallery/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <title>Heroes | Responsive Movie Landing Page Design</title>
+    <title>Image Galleryn</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
